--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="items op">/</div>
             <div class="items">.</div>
             <div class="items">0</div>
-            <div class="items" id="backspace"><i class="fas fa-backspace"></i></div>
+            <div class="items" id="backspace">c</i></div>
             <div class="items" id="equal">=</div>
         </div>
     </div>
